k8s/istio/transaction-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transaction-service-vsvc
spec:
  hosts:
    - "*"
  gateways:
    - transaction-gateway
  http:
    - name: primary
      route:
        - destination:
            host: transaction-service-stable
            port:
              number: 8080
          weight: 100
        - destination:
            host: transaction-service-canary
            port:
              number: 8080
          weight: 0
